  * Perform a weekly scheduled cron task that scrubs all mounted
    Btrfs file systems. A report will be emailed afterwards.
    Use the OMV_BTRFS_SCRUB_ENABLED environment variable to disable
    this task. Use the additional variables OMV_BTRFS_SCRUB_PRIORITY
    and OMV_BTRFS_SCRUB_READONLY to customize the scrub task.
  * Improve cron scripts by added better logging output.
  * Translate Cron expressions to human-readable descriptions.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Mar 2023 22:04:06 +0100

openmediavault (6.3.4-1) stable; urgency=low

  * Update locale files.
  * Rename various navigation menu items in the UI.
  * Add `All Snapshots` button in the `Storage | Shared Folders`
    page to manage the snapshots of all shared folders that are
    located on a Btrfs file system.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 12 Mar 2023 21:54:03 +0100

openmediavault (6.3.3-1) stable; urgency=low

  * Update locale files.
  * Display hostname in page title.
  * The `OMV_SSL_CERTIFICATE_CHECK_EXPIRY_ENABLED` environment
    variable has been added to be able to disable the daily SSL
    certificate expiration cron job. Defaults to `yes`.
  * Add a prefix to shared folder snapshots that are created
    via scheduled tasks, e.g. `images@daily_20230228T095758`.
    Please delete your existing scheduled tasks and recreate
    them to take advantage of the new naming scheme.
  * Add the ability to specify the metric (relative priority)
    of the default route set via the `Gateway` option in the
    network interface page.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 28 Feb 2023 00:08:49 +0100

openmediavault (6.3.2-2) stable; urgency=low

  * Update locale files.
  * Issue #1490: Support SMB shadow copies for home directories
    when the shared folder is located on a Btrfs file system.
  * Issue #1500: Use ISO 8601 basic format in the snapshot
    naming schema because Windows does not support `:` in