@@ -25,6 +25,31 @@ data:
         hint: _("The location of the files to scan.")
         validators:
           required: true
+      - type: textInput
+        name: cronexprdesc
+        label: _("Time of execution")
+        disabled: true
+        submitValue: false
+        value: ""
+        modifiers:
+          - type: value
+            typeConfig: |
+              {% set _minute = minute %}
+              {% set _hour = hour %}
+              {% set _dayofmonth = dayofmonth %}
+              {% if everynminute %}{% set _minute %}*/{{ minute }}{% endset %}{% endif %}
+              {% if everynhour %}{% set _hour %}*/{{ hour }}{% endset %}{% endif %}
+              {% if everyndayofmonth %}{% set _dayofmonth %}*/{{ dayofmonth }}{% endset %}{% endif %}
+              {{ [_minute, _hour, _dayofmonth, month, dayofweek] | join(" ") | cron2human }}
+            deps:
+              - minute
+              - hour
+              - dayofmonth
+              - month
+              - dayofweek
+              - everynminute
+              - everynhour
+              - everyndayofmonth
       - type: container
         fields:
           - type: select
