@@ -305,6 +305,37 @@ export class RsyncTaskFormPageComponent extends BaseFormPageComponent {
         }
       },
       {
+        type: 'textInput',
+        name: 'cronexprdesc',
+        label: gettext('Time of execution'),
+        disabled: true,
+        submitValue: false,
+        value: '',
+        modifiers: [
+          {
+            type: 'value',
+            typeConfig:
+              '{% set _minute = minute %}' +
+              '{% set _hour = hour %}' +
+              '{% set _dayofmonth = dayofmonth %}' +
+              '{% if everynminute %}{% set _minute %}*/{{ minute }}{% endset %}{% endif %}' +
+              '{% if everynhour %}{% set _hour %}*/{{ hour }}{% endset %}{% endif %}' +
+              '{% if everyndayofmonth %}{% set _dayofmonth %}*/{{ dayofmonth }}{% endset %}{% endif %}' +
+              '{{ [_minute, _hour, _dayofmonth, month, dayofweek] | join(" ") | cron2human }}',
+            deps: [
+              'minute',
+              'everynminute',
+              'hour',
+              'everynhour',
+              'dayofmonth',
+              'everyndayofmonth',
+              'month',
+              'dayofweek'
+            ]
+          }
+        ]
+      },
+      {
         type: 'container',
         fields: [
           {
